@@ -1457,7 +1457,21 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
-  { /* Canon MULTIPASS MP493: new model after MP480(?) --- with XML */
+  { /* Canon MULTIPASS MP490 --- with XML */
+    "PIXMA MP490", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    /* 8, */
+    &canon_MULTIPASS_MP250_slotlist, /* only rear tray also uses CAP_T */
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_P|CANON_CAP_T|CANON_CAP_I|CANON_CAP_XML,0,control_cmd_PIXMA_iP2700,  /*features */
+    &canon_MULTIPASS_MP490_modelist,
+    &canon_MULTIPASS_MP493_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
+  { /* Canon MULTIPASS MP493 --- with XML */
     "PIXMA MP493", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
     10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
