@@ -270,6 +270,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP3300 (EXPERIMENTAL)
        Canon PIXMA MP375R
        Canon PIXMA MP190  (EXPERIMENTAL)
+       Canon PIXMA MP490  (EXPERIMENTAL)
        Canon PIXMA MP530  (EXPERIMENTAL)
 
      - Epson inkjet printers:
